--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/cjmarguin/cmarg-a3/issues"
   },
-  "homepage": "https://github.com/cjmarguin/cmarg-a3#readme"
+  "homepage": "https://github.com/cjmarguin/cmarg-a3#readme",
+    "dependencies": {
+        "body-parser": "^1.19.0",
+        "ejs": "^2.7.1",
+        "express": "^4.17.1"
+    }
+       
 }
