--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "url": "https://github.com/cjmarguin/cmarg-a3/issues"
   },
   "homepage": "https://github.com/cjmarguin/cmarg-a3#readme",
-    "dependencies": {
-        "body-parser": "^1.19.0",
-        "ejs": "^2.7.1",
-        "express": "^4.17.1"
-    }
-       
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "ejs": "^2.7.1",
+    "express": "^4.17.1",
+    "node-fetch": "^2.6.0"
+  }
 }
