--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/cjmarguin/cmarg-a3.git"
   },
-  "author": "",
+  "author": "Claudia 'Cj' Marguin",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/cjmarguin/cmarg-a3/issues"
