--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "body-parser": "^1.19.0",
     "ejs": "^2.7.1",
     "express": "^4.17.1",
-    "node-fetch": "^2.6.0"
+    "http": "0.0.0",
+    "https": "^1.0.0",
+    "node-fetch": "^2.6.0",
+    "request": "^2.88.0"
   }
 }
